<resources>
    <!--activity_main.xml-->
    <string name="app_name">朕的网络</string>
    <string name="project_name">SudaLogin</string>
    <string name="version">v1.5-beta</string>
    <string name="caption">也许是最好用的苏大网关APP\n</string>

    <string name="username_hint">账号</string>
    <string name="username_error">账号不能为空</string>
    <string name="password_hint">密码</string>
    <string name="password_error">密码不能为空</string>

    <string name="macAuth_title">漫游免认证</string>
    <string name="login_btn_caption"> 登 录 </string>
    <string name="logout_btn_caption"> 注 销 </string>
    <string name="helo_btn_caption">More</string>

    <string name="login_sent_toast">登录请求已发送</string>
    <string name="logout_sent_toast">退出请求已发送</string>
    <string name="smartLogin_toast">智能登录</string>

    <string name="connecting_caption">正在连接</string>
    <string name="ready_caption">就绪</string>
    <string name="noWifi_caption">未连接WiFi</string>
    <string name="waiting_caption">等待响应…</string>
    <string name="notSudaWifi_caption">当前Wi-Fi不是苏大网络(SSID)</string>


    <!--activity_help.xml-->
    <string name="icon_caption">配图：大作家：喵大人颜值高任性还挑食！</string>

    <string name="help_title">\n帮助</string>
    <string name="help_info">漫游免认证：网关将记忆MAC地址，当天无需重复登录。\n</string>

    <string name="features_title">\n特性</string>
    <string name="features_info">
        <b>自动记忆</b>：自动记忆账户信息及设置；\n
        <b>智能登录</b>：记录使用情况，自动登录；\n
        <b>开机启动</b>：开机自动登网关（需权限）；\n
        <b>网络感知</b>：感应网络变化，自动保持认证；\n
        <b>一键登录</b>：添加桌面快捷方式；\n
    </string>

    <string name="settings_title">\n设置</string>

    <string name="autoSave_title">自动记忆</string>
    <string name="autoSave_caption">自动记忆说明\n</string>
    <string name="autoSave_tips_on">自动记忆已开启\n</string>
    <string name="autoSave_tips_off">自动记忆已关闭，您的账号、密码及偏好数据不会被记录，智能登录已禁用\n</string>

    <string name="smartLogin_title">智能登录</string>
    <string name="smartLogin_caption">智能登录说明\n</string>
    <string name="smartLogin_tips_on">智能登录已开启\n</string>
    <string name="smartLogin_tips_off">智能登录已关闭，请手动点击登录按钮\n</string>

    <string name="bootLogin_title">开机启动</string>
    <string name="bootLogin_caption">开机启动，自动登录网关\n</string>
    <string name="bootLogin_tips_on">开机启动已开启\n</string>
    <string name="bootLogin_tips_off">开机启动已关闭\n</string>

    <string name="netchangeLogin_title">网络感知</string>
    <string name="netchangeLogin_caption">网络感知，感应网络状态变化\n</string>
    <string name="netchangeLogin_tips_on">网络感知已开启\n</string>
    <string name="netchangeLogin_tips_off">网络感知已关闭\n</string>

    <string name="oneTouchLogin_title">一键登录</string>
    <string name="oneTouchLogin_caption">一键登录说明</string>
    <string name="oneTouchLogin_install">创建一键登录</string>
    <string name="oneTouchLogin_installing">已创建一键登录</string>

    <string name="updates_title">\n更新日志</string>
    <string name="updates_info">
        v1.5-beta_build20170407\n
        1. 新功能<b>“开机自启”</b>，每日随手机开机自动登录；\n
        2. 新功能<b>“网络感知”</b>，感知网络状态变化，自动保持认证连接；\n
        3. Bug Fixes；\n\n
        获取更新： https://github.com/HearyShen/SudaLogin/releases\n
    </string>

    <string name="joiner_title">\n冠名及配图</string>
    <string name="joiner_info">大作家：喵大人颜值高任性还挑食！\n</string>

    <string name="author_title">\n开发者</string>
    <string name="author_info">
        <b>GitHub</b>： <a href="https://github.com/HearyShen/" target="_blank">HearyShen</a>\n
        <b>E-mail</b>： shenjiayun1996@126.com\n
        <b>Blog</b>： https://heary.cn\n
    </string>
</resources>
