<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demo.hearyshen.sudalogin.HelpActivity">

    <ScrollView
        android:id="@+id/MoreInfo_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_moreTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_name"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/background_dark"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/version"
                android:textAlignment="viewEnd"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/imgv_icon"
                android:layout_width="wrap_content"
                android:layout_height="355dp"
                android:contentDescription="@string/icon_caption"
                app:srcCompat="@drawable/anim_icon" />

            <TextView
                android:id="@+id/tv_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caption"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:textSize="17sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_helpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_title"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_helpInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_info"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_featuresTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features_title"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_featuresInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features_info"
                android:textSize="17sp" />

            <Switch
                android:id="@+id/sw_autoSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autoSave_title"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_autoSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autoSave_caption" />

            <Switch
                android:id="@+id/sw_smartLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smartLogin_title"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_smartLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smartLogin_caption" />

            <TextView
                android:id="@+id/tv_oneTouch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oneTouchLogin_title"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_oneTouch_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oneTouchLogin_caption" />

            <Button
                android:id="@+id/btn_oneTouch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:elevation="0dp"
                android:text="@string/oneTouchLogin_install"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_updatesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updates_title"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_updatesInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/updates_info"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_joinerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joiner_title"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_joinerInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joiner_info"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_authorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_title"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_authorInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web|email"
                android:text="@string/author_info"
                android:textSize="17sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
